--- a/reports/march/main.tex
+++ b/reports/march/main.tex
@@ -1000,7 +1000,7 @@ error = clBuildProgram(program,...
 \end{lstlisting}
 This approach drastically improves the performance and would be the suitable
 solution when running OpenCL programs on embedded platforms. Furthermore, it does
-not need major changes in the code, but compiled kerneles must be shipped together
+not need major changes in the code, but compiled kernels must be shipped together
 with the executable file.\\\\
 In order to test some real OpenCL application, the EasyCL project was added to
 Buildroot, allowing to get an idea about what kind of functionalities work
