--- a/presentations/smile/main.tex
+++ b/presentations/smile/main.tex
@@ -35,12 +35,14 @@
 \title[]{LLVM/Clang integration to Buildroot}
 
 \author{Valentin Korenblit}
+\iffalse
 \institute[Smile]
 {
 Smile \\~\\
 \medskip
 \textit{valentin.korenblit@smile.fr}
 }
+\fi
 \date{\today}
 
 \begin{document}
@@ -443,7 +445,6 @@ ROCm OpenCL & 1.2 & AMD\footnote{ROCm compatible hardware}\\
   \begin{itemize}
     \item Only libclang.so is necessary.
   \end{itemize}
-  \item The main problem: \textbf{dynamic linking}
 \end{itemize}
 \end{frame}
 
