Remove clang packaging slide

--- a/presentations/smile/main.tex
+++ b/presentations/smile/main.tex
@@ -431,6 +431,7 @@ ROCm OpenCL & 1.2 & AMD\footnote{ROCm compatible hardware}\\
 \end{figure}
 \end{frame}
 
+\iffalse
 \begin{frame}
 \frametitle{Clang packaging for Buildroot}
 \begin{itemize}
@@ -449,6 +450,7 @@ ROCm OpenCL & 1.2 & AMD\footnote{ROCm compatible hardware}\\
   \end{itemize}
 \end{itemize}
 \end{frame}
+\fi
 
 \iffalse
 \begin{frame}
